# xyw_lidar_test

./: .gitignore  CMakeLists.txt  README.MD  package.xml
cfg/: XYWLidarTest.cfg
include/: KITTI_helper.hpp  exprimental.hpp  geometry_transform.hpp  pcl_helper.hpp  rslidar_utils.hpp  time_utils.hpp
include/lidar_test/: lidarParse.hpp
include/so3/: so3.hpp
include/xyw_test_include/: hello.hpp
launch/: xyw_start.launch
log/: INFO_log_20210422-205443.3507  INFO_log_20210422-211133.3881  INFO_log_20210422-211153.3930  INFO_log_20210422-212453.4465  INFO_log_20210426-214359.25644  INFO_log_20210426-214727.25795  INFO_log_20210426-222916.434  INFO_log_20210426-223001.523  INFO_log_20210427-111029.14104  INFO_log_20210427-111129.14190  INFO_log_20210427-111708.15184  INFO_log_20210427-111849.15520  INFO_log_20210427-112039.16108  INFO_log_20210427-112837.16855  INFO_log_20210427-112923.16916  INFO_log_20210427-113056.17033  INFO_log_20210427-113719.17222  INFO_log_20210427-114004.17476  INFO_log_20210427-114117.17901  INFO_log_20210427-114336.18533  INFO_log_20210427-114708.18636  INFO_log_20210427-141259.28246  INFO_log_20210427-141431.28480  INFO_log_20210427-141808.28564  INFO_log_20210427-141903.28628  INFO_log_20210427-142021.28716  INFO_log_20210427-142111.28767  INFO_log_20210427-143348.32395  INFO_log_20210427-143523.347  INFO_log_20210427-143657.448  INFO_log_20210428-111921.5276  INFO_log_20210428-112134.5405  INFO_log_20210428-112539.5503  INFO_log_20210428-112826.5591  INFO_log_20210428-113146.5701  INFO_log_20210428-113356.5802  INFO_log_20210428-113506.5973  INFO_log_20210428-145547.30844  INFO_log_20210428-161807.6372  INFO_log_20210429-143543.15130  (+104 more)
msg/: people_item.msg  people_list.msg
python/: xyw_math_test.py
res/: 000027.pcd
src/: classTest.cpp  main.cpp
yaml/: lidar.yaml
